tests/output/self_hosted/ambiguous_union_error.txt
tests/ambiguous_union_error.oomph:7: error: wrong type: should be Ambiguous, but it's Str

    blah("lol")
          ^^^

assert() failed in "self_hosted/error.oomph", line N
